# qr-server

./: LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/ctr/: mod.rs  qr.rs
service/: qr-server.service
