[package]
name = "qr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
qrcode = { version = "0.12.0", features = ["image"] }
image = { version = "0.23" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
md5 = "0.7.0"
once_cell = "1.17.1"

oxipng = { version = "9.0", features = [
  "parallel",
], default-features = false, optional = true }
